# Honorario-cf

./: .gitignore  Instructions.md  README.md
.github/workflows/: ci.yml
backend/: .env.example  Dockerfile  pyproject.toml  render.yaml  requirements.txt
backend/app/: auth.py  config.py  database.py  main.py
backend/app/models/: contract.py
backend/app/routers/: cnpj.py  contract.py  contracts.py  docuseal.py  email.py  users.py
backend/app/services/: azure_email.py  contract_generator.py  docuseal.py
backend/app/utils/: currency.py
backend/templates/: timbrado_peticao_1.dotx
backend/tests/: conftest.py  test_bugfixes.py  test_cnpj.py  test_contract_download.py  test_send_for_signature.py
frontend/: .env.example  next.config.ts  package-lock.json  package.json  tsconfig.tsbuildinfo
frontend/src/: auth.ts  middleware.ts
frontend/src/app/: globals.css  layout.tsx  page.tsx
frontend/src/app/admin/: page.tsx
frontend/src/app/contracts/: page.tsx
frontend/src/app/contracts/[id]/: page.tsx
frontend/src/app/contracts/[id]/edit/: page.tsx
frontend/src/app/lib/: api.ts
frontend/src/app/login/: page.tsx
frontend/src/components/: AuthSync.tsx  ContractWizard.tsx  Providers.tsx  UserMenu.tsx
frontend/src/components/steps/: Step1Contratante.tsx  Step2Escopo.tsx  Step3Honorarios.tsx  Step4Acessorios.tsx  Step5Participacao.tsx  Step6Revisao.tsx  Step7Envio.tsx
frontend/src/components/ui/: CurrencyInput.tsx  FormField.tsx  Logo.tsx  StepIndicator.tsx
frontend/src/types/: contract.ts
