[project]
name = "honorarios-api"
version = "0.1.0"
description = "API para automacao de contratos de honorarios advocaticios"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "python-docx>=1.1.0",
    "python-multipart>=0.0.9",
    "httpx>=0.27.0",
    "pydantic>=2.0",
    "pydantic-settings>=2.0",
    "num2words>=0.5.13",
    "python-dotenv>=1.0.0",
    "jinja2>=3.1.0",
    "msal>=1.28.0",
    "azure-communication-email>=1.0.0",
]

[tool.hatch.build.targets.wheel]
packages = ["app"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"