[project]
name = "honorarios-api"
version = "0.1.0"
description = "API para automacao de contratos de honorarios advocaticios"
requires-python = ">=3.11"

[tool.setuptools.packages.find]
where = ["."]
include = ["app*"]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"
